--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/date-fns": "^2.10.6",
+    "@date-io/date-fns": "1.3.11",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
-    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/pickers": "3.2.10",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "cpf-cnpj-validator": "^1.0.3",
+    "date-fns": "2.11.1",
     "mui-datatables": "^3.7.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
