--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "cpf-cnpj-validator": "^1.0.3",
