--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "string-mask": "^0.3.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
