--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mui-datatables": "^3.7.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-big-calendar": "^0.30.0",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.13.1",
     "react-input-mask": "^2.0.4",
