--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^1.1.1",
     "cpf-cnpj-validator": "^1.0.3",
     "date-fns": "2.11.1",
+    "moment": "^2.29.1",
     "mui-datatables": "^3.7.3",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
