--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.1",
     "react-big-calendar": "^0.30.0",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-hook-form": "^6.13.1",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.2",
